tests/snapshots/diagnostics/golden_diagnostics_forensic_dump__minimal_runtime.snap
---
source: tests/golden_diagnostics_forensic_dump.rs
expression: dump
---
ForensicDump {
    scenario: "minimal_runtime",
    timestamp_normalized: true,
    region_explanations: [
        RegionOpenExplanation {
            region_id: RegionId(0:0),
            region_state: Some(
                Open,
            ),
            reasons: [],
            recommendations: [],
        },
    ],
    task_explanations: [],
    obligation_leaks: [],
    deadlock_severity: "None",
    health_classification: "Healthy { margin: 0.0 }",
    metadata: ForensicDumpMetadata {
        test_name: "minimal_runtime",
        description: "Minimal runtime with single root region",
        region_count: 1,
        task_count: 0,
        obligation_count: 0,
        virtual_time: false,
    },
}
